k8s/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: nti-final-project
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
